fixed several style issues on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -91,12 +91,12 @@
 					/>
 				</div>
 				<div class="icons-style">
-					<div class="icons-style-control">
+					<button class="icons-style-control">
 						<h3>Customize the icons</h3>
 						<span class="icons-style-chevron">
 							<i pangolin="chevronDown"></i
 						></span>
-					</div>
+					</button>
 					<div class="style-grid icons-style-controller">
 						<label for="stroke-width">Stroke-width:</label>
 						<div class="input-container">
