fixed several style issues on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
 						<span><strong>Type</strong></span>
 						<span><strong>Description</strong></span>
 						<span>element</span>
-						<span>HTMLElement</span>
+						<span style="word-break: break-all;">HTMLElement</span>
 						<span
 							>An HTMLElement that should be converted to a
 							Pangolin icon. The element has to have a Pangolin
