changed title text

--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,11 @@
 		<main>
 			<section class="title-container">
 				<h1>
-					Pangoli<span>co</span>n
+					Pangoli<span>co</span>ns
 				</h1>
-				<h3>Modern & minimal open source icons.</h3>
+				<h3>Modern & minimal open source icon library.</h3>
 				<div class="title-links">
-					<a class="link-button link-att" href="#api">Learn how</a>
+					<a class="link-button link-att" href="#api">Get started</a>
 					<a class="link-button" download href="/pangolin_icons.zip"
 						>Download all</a
 					>
