changed some stylings, fixed some mistakes in the api section, added open source section, cleaned up the event listeners

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
 					</p>
 					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"./your/path/to/pangolion.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
 					</pre>
-					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.now.sh/pangolin.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
+					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.herokuapp.com/pangolin.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
 					</pre>
 					<p>
 						Then, create a <strong>&lt;i&gt;</strong> element with a
@@ -252,7 +252,7 @@
 						icons directly using javascript.
 					</p>
 					<pre><code>console.<span style="color:slateblue ">log</span>(<span style="color: indianred">Pangolin</span>)
-<span style="color: lightgray">// {_defaultAttributes: {…}, icons: {…}, _toSvg: ƒ, _replace: ƒ} </span></code>
+// {_defaultAttributes: {…}, icons: {…}, _toSvg: ƒ, _replace: ƒ, toString: ƒ}</code>
 					</pre>
 					<h3>Pangolin.icons</h3>
 					<p>
@@ -340,6 +340,15 @@ Pangolin.<span style="color: slateblue">_replace(<span style="color: indianred">
 &lt;svg <span style="color:indianred">class</span>=<span style="color: seagreen">"icon-to-replace"</span> <span style="color:indianred">pangolin</span>=<span style="color: seagreen">"x"</span> ... &gt;
 	&lt;path ... /&gt;
 &lt;/svg&gt;</code></pre>
+				</article>
+				<article>
+					<h1>5. Play with it:</h1>
+					<p>
+						Pangolicons is licensed under the MIT license which
+						makes it open source. You can experiment with it, add
+						Icons to it, or recompile it to use just the icons that
+						you need!
+					</p>
 				</article>
 			</section>
 		</main>
