--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pangolicons</title>
 		<script rel="preload" src="./pangolin.latest.mjs" as="script"></script>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@300;600&display=swap"
+			rel="preload"
+			as="stylesheet"
+		/>
 		<link rel="preload" href="./styles/style.css" as="style" />
 		<link rel="stylesheet" href="./styles/style.css" as="stylesheet" />
 		<link
