--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pangolicons</title>
-		<script rel="preload" src="./pangolin.latest.mjs" as="script"></script>
+		<script
+			rel="preload"
+			src="./pangolicons.latest.mjs"
+			as="script"
+		></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@300;600&display=swap"
 			rel="preload"
