--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pangolicons</title>
-		<script
-			rel="preload"
-			src="./pangolicons.latest.mjs"
-			as="script"
-		></script>
+		<script src="./pangolicons.latest.mjs"></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@300;600&display=swap"
 			rel="preload"
-			as="stylesheet"
+			as="style"
 		/>
 		<link rel="preload" href="./styles/style.css" as="style" />
 		<link rel="stylesheet" href="./styles/style.css" as="stylesheet" />
@@ -199,9 +195,9 @@
 						To use Pangolicons, you can simply include or link to it
 						on your website.
 					</p>
-					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"./your/path/to/pangolion.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
+					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"./your/path/to/pangolion.latest.min.mjs"</span> <span style="color:indianred">type=</span><span style="color: seagreen">"module"</span> &gt;&lt;/script&gt;</code>
 					</pre>
-					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.herokuapp.com/pangolin.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
+					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.herokuapp.com/pangolin.latest.min.mjs"</span> <span style="color:indianred">type=</span><span style="color: seagreen">"module"</span> &gt;&lt;/script&gt;</code>
 					</pre>
 					<p>
 						Then, create a <strong>&lt;i&gt;</strong> element with a
@@ -410,6 +406,6 @@ let found = Pangolin.<span style="color: slateblue">search(<span style="color: s
 				>
 			</p>
 		</footer>
-		<script src="./scripts/app.js"></script>
+		<script src="./scripts/app.mjs"></script>
 	</body>
 </html>
