updatet docs on website..

--- a/public/index.html
+++ b/public/index.html
@@ -195,9 +195,9 @@
 						To use Pangolicons, you can simply include or link to it
 						on your website.
 					</p>
-					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"./your/path/to/pangolion.latest.min.mjs"</span> <span style="color:indianred">type=</span><span style="color: seagreen">"module"</span> &gt;&lt;/script&gt;</code>
+					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"./your/path/to/pangolion.latest.min.mjs"</span>  &gt;&lt;/script&gt;</code>
 					</pre>
-					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.herokuapp.com/pangolin.latest.min.mjs"</span> <span style="color:indianred">type=</span><span style="color: seagreen">"module"</span> &gt;&lt;/script&gt;</code>
+					<pre><code>&lt;script <span style="color:indianred">src=</span><span style="color: seagreen">"https://pangolicons.herokuapp.com/pangolin.latest.min.mjs"</span> &gt;&lt;/script&gt;</code>
 					</pre>
 					<p>
 						Then, create a <strong>&lt;i&gt;</strong> element with a
