--- a/public/index.html
+++ b/public/index.html
@@ -23,31 +23,33 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/favicons/apple-touch-icon.png"
+			href="/favicons/apple-touch-icon.png?v=KmwmmY2KbK"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/favicons/favicon-32x32.png"
+			href="/favicons/favicon-32x32.png?v=KmwmmY2KbK"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/favicons/favicon-16x16.png"
+			href="/favicons/favicon-16x16.png?v=KmwmmY2KbK"
 		/>
-		<link rel="manifest" href="/favicons/site.webmanifest" />
+		<link rel="manifest" href="/favicons/site.webmanifest?v=KmwmmY2KbK" />
 		<link
 			rel="mask-icon"
-			href="/favicons/safari-pinned-tab.svg"
+			href="/favicons/safari-pinned-tab.svg?v=KmwmmY2KbK"
 			color="#5bbad5"
 		/>
-		<link rel="shortcut icon" href="/favicons/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#00aba9" />
+		<link rel="shortcut icon" href="/favicons/favicon.ico?v=KmwmmY2KbK" />
+		<meta name="apple-mobile-web-app-title" content="Pangolicons" />
+		<meta name="application-name" content="Pangolicons" />
+		<meta name="msapplication-TileColor" content="#2b5797" />
 		<meta
 			name="msapplication-config"
-			content="/favicons/browserconfig.xml"
+			content="/favicons/browserconfig.xml?v=KmwmmY2KbK"
 		/>
 		<meta name="theme-color" content="#ffffff" />
 	</head>
